[package]
name = "cp_sat"
version = "0.3.3"
edition = "2018"
description = "Rust bindings to the Google CP-SAT constraint programming solver."
documentation = "https://docs.rs/cp_sat"
repository = "https://github.com/KardinalAI/cp_sat"
license = "Apache-2.0"
keywords = ["constraint", "programming", "CP"]
categories = ["api-bindings", "mathematics", "science"]
readme = "README.md"

[dependencies]
prost = "0.13.5"
bytes = "1.10.1"
libc = "0.2.172"
smallvec = { version = "1.15.0", default-features = false, features = ["union"]}
protobuf = "3.7.2"
protoc = "2.28.0"

[build-dependencies]
prost-build = { version = "0.13.5" }
cc = "1.2.19"
